--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fasthash = "0.4.0"
+fasthash = { version = "0.4.0"}
+regex = "1.10.6"
+serde = { version = "1.0.210", features = ["derive"] }
+chrono = "0.4.38"
