--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fasthash = { version = "0.4.0"}
+murmur3 = "0.5"
 regex = "1.10.6"
 serde = { version = "1.0.210", features = ["derive"] }
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 serde_json = "1.0.128"
