--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ regex = "1.10.6"
 serde = { version = "1.0.210", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 serde_json = "1.0.128"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
