--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-murmur3 = "0.5"
-regex = "1.10.6"
-serde = { version = "1.0.210", features = ["derive"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-serde_json = "1.0.128"
-reqwest = { version = "0.11", features = ["json"] }
+murmur3 = "0.5.2"
+regex = "1.11.3"
+serde = { version = "1.0.228", features = ["derive"] }
+chrono = { version = "0.4.42", features = ["serde"] }
+serde_json = "1.0.145"
+reqwest = { version = "0.12.23", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
+once_cell = "1.21.3"
