don't fail on clippy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
 
     - name: Run clippy
-      run: cargo clippy -- -D warnings
+      run: cargo clippy
       if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
 
     - name: Build
