--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 murmur3 = "0.5.2"
 regex = "1.11.3"
-serde = { version = "1.0.228", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive", "rc"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 serde_json = "1.0.145"
 reqwest = { version = "0.12.23", features = ["json"] }
