--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "devcycle-bucketing-rs"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+# Support multiple crate types for different targets
+crate-type = ["rlib", "cdylib", "staticlib"]
+
 [dependencies]
 murmur3 = "0.5.2"
 regex = "1.11.3"
@@ -14,3 +18,28 @@ tokio = { version = "1.0", features = ["full"] }
 once_cell = "1.21.3"
 semver = "1.0"
 hostname = "0.4"
+
+# WASM-specific dependencies
+wasm-bindgen = { version = "0.2", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
+serde-wasm-bindgen = { version = "0.6", optional = true }
+console_error_panic_hook = { version = "0.1", optional = true }
+
+# FFI-specific dependencies
+libc = { version = "0.2", optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+# Use wasm-compatible alternatives when targeting WASM
+reqwest = { version = "0.12.23", features = ["json"], default-features = false }
+tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
+getrandom = { version = "0.2", features = ["js"] }
+
+[features]
+default = []
+wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "console_error_panic_hook"]
+ffi = ["libc"]
+
+[profile.release]
+# Optimize for size when building WASM
+opt-level = "s"
+lto = true
