--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,9 @@ regex = "1.11.3"
 serde = { version = "1.0.228", features = ["derive", "rc"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 serde_json = "1.0.145"
-reqwest = { version = "0.12.23", features = ["json"] }
-tokio = { version = "1.0", features = ["full"] }
 once_cell = "1.21.3"
 semver = "1.0"
-hostname = "0.4"
+cfg-if = "1.0"
 
 # WASM-specific dependencies
 wasm-bindgen = { version = "0.2", optional = true }
@@ -37,9 +35,19 @@ reqwest = { version = "0.12.23", features = ["json"], default-features = false }
 tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
 getrandom = { version = "0.2", features = ["js"] }
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+reqwest = { version = "0.12.23", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+hostname = "0.4"
+
 [features]
 default = []
-wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "console_error_panic_hook"]
+wasm = [
+    "wasm-bindgen",
+    "wasm-bindgen-futures",
+    "serde-wasm-bindgen",
+    "console_error_panic_hook",
+]
 ffi = ["libc"]
 
 [[bench]]
