--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ once_cell = "1.21.3"
 semver = "1.0"
 cfg-if = "1.0"
 
+# Protobuf dependencies
+prost = { version = "0.13", optional = true }
+prost-types = { version = "0.13", optional = true }
+
 # WASM-specific dependencies
 wasm-bindgen = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
@@ -28,6 +32,9 @@ libc = { version = "0.2", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
+
+[build-dependencies]
+prost-build = { version = "0.13", optional = true }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 # Use wasm-compatible alternatives when targeting WASM (wasm32-unknown-unknown, wasm32-wasi, etc.)
@@ -49,6 +56,7 @@ wasm = [
     "console_error_panic_hook",
 ]
 ffi = ["libc"]
+protobuf = ["prost", "prost-types", "prost-build"]
 
 [[bench]]
 name = "bucketing_benchmarks"
