--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,6 @@ once_cell = "1.21.3"
 semver = "1.0"
 cfg-if = "1.0"
 
-# Protobuf dependencies
-prost = { version = "0.13", optional = true }
-prost-types = { version = "0.13", optional = true }
-
 # WASM-specific dependencies
 wasm-bindgen = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
@@ -32,9 +28,7 @@ libc = { version = "0.2", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
-
-[build-dependencies]
-prost-build = { version = "0.13", optional = true }
+reqwest = { version = "0.12.23", features = ["json"] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 # Use wasm-compatible alternatives when targeting WASM (wasm32-unknown-unknown, wasm32-wasi, etc.)
@@ -43,20 +37,17 @@ tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
 getrandom = { version = "0.2", features = ["js"] }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-reqwest = { version = "0.12.23", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 hostname = "0.4"
 
 [features]
-default = []
+default = ["libc"]
 wasm = [
     "wasm-bindgen",
     "wasm-bindgen-futures",
     "serde-wasm-bindgen",
     "console_error_panic_hook",
 ]
-ffi = ["libc"]
-protobuf = ["prost", "prost-types", "prost-build"]
 
 [[bench]]
 name = "bucketing_benchmarks"
