--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            use_cross: false
+            use_cross: true
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             use_cross: true
@@ -96,12 +96,9 @@ jobs:
           - os: macos-latest
             target: aarch64-apple-darwin
             use_cross: false
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            use_cross: false
-          - os: windows-latest
-            target: aarch64-pc-windows-msvc
-            use_cross: false
+          - os: ubuntu-latest
+            target: x86_64-pc-windows-gnu
+            use_cross: true
     runs-on: ${{ matrix.os }}
     env:
       CARGO_TERM_COLOR: always
