--- a/.github/workflows/crate-publish.yml
+++ b/.github/workflows/crate-publish.yml
@@ -1,8 +1,8 @@
 name: Publish to crates.io
 on:
   push:
-    tags: [ 'v*' ]  # Triggers when pushing tags starting with 'v'
-  
+    tags: [ '*' ]  # Triggers when pushing tags starting with 'v'
+
 jobs:
   publish:
     runs-on: ubuntu-latest
