--- a/.github/workflows/crate-publish.yml
+++ b/.github/workflows/crate-publish.yml
@@ -1,7 +1,7 @@
 name: Publish to crates.io
 on:
   push:
-    tags: [ '*' ]  # Triggers when pushing tags starting with 'v'
+    tags: [ 'v*' ]  # Triggers when pushing tags starting with 'v'
 
 jobs:
   publish:
