--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,8 @@ jobs:
           git config user.name "DevCycle Automation"
           git add Cargo.toml
           git add Cargo.lock
-          git commit -m "Release ${{ steps.prepare-release.outputs.next-release-tag }}"
-          git push origin HEAD:main
+          git commit -m "Release ${{ steps.prepare-release.outputs.next-release-tag }}" || echo "No changes to commit"
+          git push origin HEAD:main || echo "No changes to push"
 
   ffi:
     name: FFI Build (${{ matrix.target }})
